--- a/layout/layout.ui
+++ b/layout/layout.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>522</width>
-    <height>424</height>
+    <width>537</width>
+    <height>302</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -74,7 +74,25 @@
         <height>1000</height>
        </size>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout"/>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="0">
+        <widget class="QPushButton" name="set_background_button">
+         <property name="text">
+          <string>Set Background</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QPushButton" name="clear_background_button">
+         <property name="text">
+          <string>Clear Background</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" colspan="2">
+        <layout class="QVBoxLayout" name="verticalLayout"/>
+       </item>
+      </layout>
      </widget>
     </item>
    </layout>
