--- a/layout/layout_with_flow.ui
+++ b/layout/layout_with_flow.ui
@@ -30,7 +30,7 @@
     <item row="0" column="2">
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_5">
+       <layout class="QVBoxLayout" name="verticalLayoutEIT">
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_7">
           <item>
@@ -76,6 +76,13 @@
          </layout>
         </item>
         <item>
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>EIT Plot</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QWidget" name="placeholderWidget" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -86,6 +93,23 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Flow Plot</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QWidget" name="placeholderWidgetFlow" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -233,6 +257,13 @@
          </layout>
         </item>
        </layout>
+      </item>
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>EIT Data</string>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QTextEdit" name="textEdit">
