Adding test buttons to record start of test. Includes prompt for confirmation if test is started again

--- a/layout/layout_with_flow.ui
+++ b/layout/layout_with_flow.ui
@@ -259,6 +259,9 @@
        </layout>
       </item>
       <item>
+       <layout class="QHBoxLayout" name="testButtonsLayout"/>
+      </item>
+      <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>EIT Data</string>
