try this for suffix box

--- a/layout/eit_with_dual_flow.ui
+++ b/layout/eit_with_dual_flow.ui
@@ -245,91 +245,84 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_26">
+       <layout class="QHBoxLayout" name="horizontalLayout_32">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_27">
+         <layout class="QVBoxLayout" name="verticalLayout_37">
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout_31">
-            <item>
-             <widget class="QWidget" name="widget_10" native="true">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>158</width>
-                <height>0</height>
-               </size>
+           <spacer name="verticalSpacer_5">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_33">
+            <property name="sizeConstraint">
+             <enum>QLayout::SetDefaultConstraint</enum>
+            </property>
+            <item alignment="Qt::AlignBottom">
+             <widget class="QPushButton" name="startRecordingButton">
+              <property name="text">
+               <string>Record Data</string>
               </property>
              </widget>
             </item>
-            <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_28">
-              <property name="sizeConstraint">
-               <enum>QLayout::SetDefaultConstraint</enum>
+            <item alignment="Qt::AlignBottom">
+             <widget class="QPushButton" name="stopRecordingButton">
+              <property name="visible">
+               <bool>false</bool>
               </property>
-              <item alignment="Qt::AlignBottom">
-               <widget class="QPushButton" name="startRecordingButton">
-                <property name="text">
-                 <string>Record Data</string>
-                </property>
-               </widget>
-              </item>
-              <item alignment="Qt::AlignBottom">
-               <widget class="QPushButton" name="stopRecordingButton">
-                <property name="visible">
-                 <bool>false</bool>
-                </property>
-                <property name="text">
-                 <string>Stop Recording</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
+              <property name="text">
+               <string>Stop Recording</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout_38">
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout_32">
-            <item>
-             <widget class="QLabel" name="label_18">
-              <property name="text">
-               <string>Data File Suffix</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QTextEdit" name="dataFileSuffixTextEdit">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>23</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>16777215</width>
-                <height>23</height>
-               </size>
-              </property>
-              <property name="baseSize">
-               <size>
-                <width>0</width>
-                <height>1</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-           </layout>
+           <widget class="QLabel" name="label_23">
+            <property name="text">
+             <string>Data File Suffix</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QTextEdit" name="dataFileSuffixTextEdit">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+              <horstretch>0</horstretch>
+              <verstretch>1</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="baseSize">
+             <size>
+              <width>0</width>
+              <height>1</height>
+             </size>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
