--- a/layout/eit_with_dual_flow.ui
+++ b/layout/eit_with_dual_flow.ui
@@ -146,7 +146,7 @@
      </layout>
     </item>
     <item row="0" column="0">
-     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,0,0,0">
       <property name="sizeConstraint">
        <enum>QLayout::SetMaximumSize</enum>
       </property>
@@ -245,7 +245,7 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_32">
+       <layout class="QHBoxLayout" name="horizontalLayout_32" stretch="0,0">
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_37">
           <item>
@@ -288,7 +288,7 @@
          </layout>
         </item>
         <item>
-         <layout class="QVBoxLayout" name="verticalLayout_38">
+         <layout class="QVBoxLayout" name="verticalLayout_38" stretch="0,1">
           <item>
            <widget class="QLabel" name="label_23">
             <property name="text">
@@ -319,7 +319,7 @@
             <property name="baseSize">
              <size>
               <width>0</width>
-              <height>1</height>
+              <height>23</height>
              </size>
             </property>
            </widget>
