--- a/layout/eit_with_dual_flow.ui
+++ b/layout/eit_with_dual_flow.ui
@@ -245,7 +245,7 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_32" stretch="0,0">
+       <layout class="QHBoxLayout" name="horizontalLayout_32" stretch="1,1">
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_37">
           <item>
@@ -288,7 +288,10 @@
          </layout>
         </item>
         <item>
-         <layout class="QVBoxLayout" name="verticalLayout_38" stretch="0,1">
+         <layout class="QVBoxLayout" name="verticalLayout_38" stretch="0,0">
+          <property name="sizeConstraint">
+           <enum>QLayout::SetDefaultConstraint</enum>
+          </property>
           <item>
            <widget class="QLabel" name="label_23">
             <property name="text">
@@ -297,32 +300,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QTextEdit" name="dataFileSuffixTextEdit">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
-              <horstretch>0</horstretch>
-              <verstretch>1</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>23</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>23</height>
-             </size>
-            </property>
-            <property name="baseSize">
-             <size>
-              <width>0</width>
-              <height>23</height>
-             </size>
-            </property>
-           </widget>
+           <widget class="QLineEdit" name="dataFileSuffixTextEdit"/>
           </item>
          </layout>
         </item>
