adding autoscale with all frames

--- a/layout/eit_with_dual_flow.ui
+++ b/layout/eit_with_dual_flow.ui
@@ -74,6 +74,16 @@
            </layout>
           </item>
           <item>
+           <widget class="QCheckBox" name="checkBoxScale">
+            <property name="text">
+             <string>Autoscale over all frames</string>
+            </property>
+            <property name="tristate">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QLabel" name="label_2">
             <property name="text">
              <string>EIT Plot</string>
