--- a/layout/layout_dual_venturi.ui
+++ b/layout/layout_dual_venturi.ui
@@ -398,7 +398,7 @@
           </font>
          </property>
          <attribute name="title">
-          <string>Unidirectional Flow Readings (Not Implemented)</string>
+          <string>Pressure</string>
          </attribute>
          <widget class="QWidget" name="layoutWidget_3">
           <property name="geometry">
@@ -433,9 +433,9 @@
               <enum>QLayout::SetDefaultConstraint</enum>
              </property>
              <item>
-              <widget class="QLabel" name="labelVolume_2">
+              <widget class="QLabel" name="labelPressure2">
                <property name="text">
-                <string>Flow Plot 2</string>
+                <string>Pressure 2</string>
                </property>
               </widget>
              </item>
@@ -462,7 +462,7 @@
                 </font>
                </property>
                <property name="text">
-                <string>Flow:</string>
+                <string>Pressure:</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -470,7 +470,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QLabel" name="uniFlowLabel2">
+              <widget class="QLabel" name="pressureLabel2">
                <property name="font">
                 <font>
                  <pointsize>10</pointsize>
@@ -518,9 +518,9 @@
               <number>10</number>
              </property>
              <item>
-              <widget class="QLabel" name="labelFlow1_2">
+              <widget class="QLabel" name="labelPressure1">
                <property name="text">
-                <string>Flow Plot1</string>
+                <string>Pressure 1</string>
                </property>
               </widget>
              </item>
@@ -538,7 +538,7 @@
               </spacer>
              </item>
              <item>
-              <widget class="QLabel" name="flowIndicatorLabel_2">
+              <widget class="QLabel" name="pressureIndicatorLabel1">
                <property name="font">
                 <font>
                  <pointsize>10</pointsize>
@@ -547,7 +547,7 @@
                 </font>
                </property>
                <property name="text">
-                <string>Flow:</string>
+                <string>Pressure</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -555,7 +555,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QLabel" name="uniFlowLabel1">
+              <widget class="QLabel" name="pressureLabel1">
                <property name="font">
                 <font>
                  <pointsize>10</pointsize>
