--- a/layout/eit_with_dual_flow.ui
+++ b/layout/eit_with_dual_flow.ui
@@ -76,7 +76,7 @@
           <item>
            <widget class="QCheckBox" name="checkBoxScale">
             <property name="text">
-             <string>Autoscale over all frames</string>
+             <string>Autoscale across frames</string>
             </property>
             <property name="tristate">
              <bool>false</bool>
@@ -316,7 +316,7 @@
      </layout>
     </item>
     <item row="0" column="0">
-     <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,0,0,0,0">
       <property name="sizeConstraint">
        <enum>QLayout::SetMaximumSize</enum>
       </property>
@@ -526,6 +526,30 @@
          <bool>true</bool>
         </property>
        </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_6">
+        <item>
+         <widget class="QPushButton" name="settingsButton">
+          <property name="text">
+           <string>Settings</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>387</width>
+            <height>17</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
       </item>
      </layout>
     </item>
