--- a/layout/layout.ui
+++ b/layout/layout.ui
@@ -165,26 +165,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QTextEdit" name="dataFileSuffixTextEdit">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>23</height>
-             </size>
-            </property>
-            <property name="baseSize">
-             <size>
-              <width>0</width>
-              <height>1</height>
-             </size>
-            </property>
-           </widget>
+           <widget class="QLineEdit" name="dataFileSuffixTextEdit"/>
           </item>
          </layout>
         </item>
